# xcleanup

./: CMakeLists.txt  README.md  main.c  xcleanup.h
